--- a/front-end-challenge2017/lesson-03/headers/index.html
+++ b/front-end-challenge2017/lesson-03/headers/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   <p>Add your headers below this paragraph element! Add an h1, h2, h3, and h4 to finish the quiz. And make sure every header has text content :)</p>
+<h1>This is my first header and it's the important one.</h1>
+<h2>This header is also important but a little bit less than the one above.</h2>
+<h3>The third header also highlights some important info, but it's not as crucial as the two above.</h3>
+<h4>And finally there is it the header number four.</h4>
 </body>
 </html>
