animal trading card correct typos

--- a/front-end-challenge2017/lesson-08/fend-animal-trading-cards-master/card.html
+++ b/front-end-challenge2017/lesson-08/fend-animal-trading-cards-master/card.html
@@ -9,9 +9,9 @@
 <body>
 	<div id="animal-card">
 		<!-- animal's name -->
-		<h3>Swifty Spiderr</h3>
+		<h3>Swifty Spider</h3>
 		<!-- animal's image -->
-		<div class="animal-image"><img src="images/spider.jpg" alt="Swifty Spiderr"></div>
+		<div class="animal-image"><img src="images/spider.jpg" alt="Swifty Spider"></div>
 		<div class="animal-info">
 			<!-- animal's interesting fact -->
 			<p><em>Faster than a lightning, sharper than a razor. When he looks into your eyes it can see your soul.</em></p>
@@ -23,7 +23,7 @@
 				<li><span class="bold">Habitat</span>: Underbeds and Incupboards</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
-			<p>Swifty Spider has 8 fast and hairy legs that allow him to move very fast. His four eyes can see in the dark and there is no animal nor human who can be missed from his sight. He often hides begind beds of little children or housewifes' pantries.</p>
+			<p>Swifty Spider has 8 fast and hairy legs that allow him to move very fast. His four eyes can see in the dark and there is no animal nor human who can be missed from his sight. He often hides behind beds of little children or housewifes' pantries.</p>
 		</div>
 	</div>
 </body>
