--- a/code-challenge/Challenge-03/index.html
+++ b/code-challenge/Challenge-03/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Daily! Code Challenge 3</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
   </head>
   <body>
     <section>
