add images and update HTML

--- a/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
+++ b/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2 - Portfolio site</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -9,34 +10,34 @@
   <header id="header__main">
     <h1>Jane Doette</h1>
     <h3>Front-End Ninja</h2>
-    <img class="header__logo" src="udacity.png" alt="Udacity logo">
+    <img class="header__logo" src="img/Udacity-logo.jpg" alt="Udacity logo">
   </header>
   <main>
     <section class="hero__image">
-      <img src="hero.jpg" alt="banner">
+      <img src="img/hero.jpg" alt="screen full of code and a read heart inside of the strong tags">
     </section>
     <section class="portfolio">
       <h2>Featured Work</h2>
       <div class="container">
         <div class="portfolio__item">
-        <img src="item1.jpg" alt="">
-        <h2>Project 1</h2>
+        <img src="img/cat.jpg" alt="cat laying oon it's back looking straight">
+        <h2>Cat app</h2>
         <a href="#">github address</a>
         </div>
         <div class="portfolio__item">
-        <img src="item2.jpg" alt="">
-        <h2>Project 2</h2>
+        <img src="img/dog.jpg" alt="face of a dog on a neutral background">
+        <h2>Dog app</h2>
         <a href="#">github address</a>
         </div>
         <div class="portfolio__item">
-        <img src="item3.jpg" alt="">
-        <h2>Project 3</h2>
+        <img src="img/chicken.jpg" alt="chicken facing left">
+        <h2>Chicken app</h2>
         <a href="#">github address</a>
         </div>
       </div><!-- .container -->
     </section><!-- .portfolio -->
   </main>
-  <script type="text/javascript" src="/js/menu.js">
+  <script type="text/javascript" src="/js/script.js">
 </script>
   </body>
 </html>
