--- a/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
+++ b/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2 - Portfolio site</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans:400,700" rel="stylesheet">
   </head>
   <body>
   <header id="header__main">
-    <h1>Jane Doette</h1>
-    <h3>Front-End Ninja</h2>
-    <img class="header__logo" src="img/Udacity-logo.jpg" alt="Udacity logo">
+    <img class="header__logo" src="img/aleks-logo2.svg" alt="Aleks logo">
+      <h1>Aleks Osinska</h1>
+      <h3>Aspiring Front-End Designer</h3>
+    <hr noshade>
   </header>
-  <main>
+  <main id="container__main">
     <section class="hero__image">
       <img src="img/hero.jpg" alt="screen full of code and a read heart inside of the strong tags">
     </section>
