add responsivness and more styles

--- a/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
+++ b/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
@@ -10,8 +10,10 @@
   <body>
   <header id="header__main">
     <img class="header__logo" src="img/aleks-logo2.svg" alt="Aleks logo">
+    <div class="header__headings_container">
       <h1>Aleks Osinska</h1>
       <h3>Aspiring Front-End Designer</h3>
+    </div>
     <hr noshade>
   </header>
   <main id="container__main">
@@ -22,19 +24,19 @@
       <h2>Featured Work</h2>
       <div class="container">
         <div class="portfolio__item">
-        <img src="img/cat.jpg" alt="cat laying oon it's back looking straight">
-        <h2>Cat app</h2>
-        <a href="#">github address</a>
+          <img src="img/cat.jpg" alt="cat laying oon it's back looking straight">
+          <h2>Cat app</h2>
+          <a href="#">github address</a>
         </div>
         <div class="portfolio__item">
-        <img src="img/dog.jpg" alt="face of a dog on a neutral background">
-        <h2>Dog app</h2>
-        <a href="#">github address</a>
+          <img src="img/dog.jpg" alt="face of a dog on a neutral background">
+          <h2>Dog app</h2>
+          <a href="#">github address</a>
         </div>
         <div class="portfolio__item">
-        <img src="img/chicken.jpg" alt="chicken facing left">
-        <h2>Chicken app</h2>
-        <a href="#">github address</a>
+          <img src="img/chicken.jpg" alt="chicken facing left">
+          <h2>Chicken app</h2>
+          <a href="#">github address</a>
         </div>
       </div><!-- .container -->
     </section><!-- .portfolio -->
