--- a/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
+++ b/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
@@ -26,21 +26,41 @@
         <div class="portfolio__item">
           <img src="img/cat.jpg" alt="cat laying oon it's back looking straight">
           <h2>Cat app</h2>
-          <a href="#">github address</a>
+          <a href="#">https://github.com/<wbr>AleksCreative/cat-app</a>
         </div>
         <div class="portfolio__item">
           <img src="img/dog.jpg" alt="face of a dog on a neutral background">
           <h2>Dog app</h2>
-          <a href="#">github address</a>
+          <a href="#">https://github.com/<wbr>AleksCreative/dog-app</a>
         </div>
         <div class="portfolio__item">
           <img src="img/chicken.jpg" alt="chicken facing left">
           <h2>Chicken app</h2>
-          <a href="#">github address</a>
+          <a href="#">https://github.com/<wbr>AleksCreative/chicken-app</a>
         </div>
+        <div class="portfolio__item">
+          <img src="img/swan.jpg" alt="face of a swan looking down on a grey background">
+          <h2>Swan app</h2>
+          <a href="#">https://github.com/<wbr>AleksCreative/swan-app</a>
+        </div>
+        <div class="portfolio__item">
+          <img src="img/owl.jpg" alt="owl looking up in the winter forrest">
+          <h2>Owl app</h2>
+          <a href="#">https://github.com/<wbr>AleksCreative/owl-app</a>
+        </div>
+        <div class="portfolio__item">
+          <img src="img/fox.jpg" alt="face of a fox with closed eyes">
+          <h2>Fox app</h2>
+          <a href="#">https://github.com/<wbr>AleksCreative/fox-app</a>
+        </div>
+        <div class="clearings"></div>
       </div><!-- .container -->
     </section><!-- .portfolio -->
   </main>
+  <footer id="footer__main">
+  <p>Made with &#9749; and &#9829; by Aleks.</p>
+  <p>&copy; 2018 AleksCreative</p>
+  </footer>
   <script type="text/javascript" src="/js/script.js">
 </script>
   </body>
