--- a/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
+++ b/FEND Nanodegree projects/Project02 - Portfolio Site/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2 - Portfolio site</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   </head>
   <body>
-  <header id="header__main">
-    <img class="header__logo" src="img/aleks-logo2.svg" alt="Aleks logo">
-    <div class="header__headings_container">
-      <h1>Aleks Osinska</h1>
-      <h3>Aspiring Front-End Designer</h3>
-    </div>
-    <hr noshade>
-  </header>
-  <main id="container__main">
-    <section class="hero__image">
-      <img src="img/hero.jpg" alt="screen full of code and a read heart inside of the strong tags">
-    </section>
-    <section class="portfolio">
-      <h2>Featured Work</h2>
-      <div class="container">
+    <header id="header__main">
+      <img class="header__logo" src="img/aleks-logo2.svg" alt="Aleks logo">
+      <div class="header__headings_container">
+        <h1>Aleks Osinska</h1>
+        <h3>Aspiring Front-End Designer</h3>
+      </div>
+      <hr>
+    </header>
+    <main id="container__main">
+      <div class="hero__image">
+        <img src="img/hero.jpg" alt="screen full of code and a read heart inside of the strong tags">
+      </div>
+      <section class="portfolio">
+        <h2>Featured Work</h2>
         <div class="portfolio__item">
           <img src="img/cat.jpg" alt="cat laying oon it's back looking straight">
           <h2>Cat app</h2>
@@ -54,14 +54,13 @@
           <a href="#">https://github.com/<wbr>AleksCreative/fox-app</a>
         </div>
         <div class="clearings"></div>
-      </div><!-- .container -->
-    </section><!-- .portfolio -->
-  </main>
-  <footer id="footer__main">
-  <p>Made with &#9749; and &#9829; by Aleks.</p>
-  <p>&copy; 2018 AleksCreative</p>
-  </footer>
-  <script type="text/javascript" src="/js/script.js">
-</script>
+      </section><!-- .portfolio -->
+    </main>
+    <footer id="footer__main">
+      <p>Made with &#9749; and &#9829; by Aleks.</p>
+      <p>&copy; 2018 AleksCreative</p>
+    </footer>
+    <script src="/js/script.js">
+    </script>
   </body>
 </html>
