update Pixel maker from challenge part - copy from my codePen

--- a/01_FEND_Challenge-2017/pixel maker/project-pixel-art-maker-starter-master/index.html
+++ b/01_FEND_Challenge-2017/pixel maker/project-pixel-art-maker-starter-master/index.html
@@ -23,11 +23,9 @@
 
     <h2>Pick A Color</h2>
     <input type="color" id="color-picker">
-
     <h2>Design Canvas</h2>
     <table id="pixel-canvas"></table>
-
+<input id="button-clear" type="button" value="Clear canvas">
     <script src="designs.js"></script>
-
 </body>
 </html>
