add Start Button to the markup

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -28,6 +28,9 @@
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
+        <section class="start-game">
+          <button class="start">Start the game</button>
+        </section>
 
         <ul class="deck">
         </ul>
