--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <section class="start-game">
-          <button class="start">Start the game</button>
+          <button id="start">Start the game</button>
         </section>
 
         <ul class="deck">
