--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -22,7 +22,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
+        	<span class="moves"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
