add 0 Moves to the moves display functionality

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -16,17 +16,19 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
-
-        	<span class="moves"></span>
+        	 	<span class="moves">0 Moves.</span>
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
+        		    <i class="fa fa-repeat"></i>
+        	  </div>
+        </section id="modal">
+        <ul class="stars">
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+        </ul>
+        <section>
+
         </section>
 
         <ul class="deck">
