add HTML for the modal

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -21,14 +21,23 @@
             <div class="restart">
         		    <i class="fa fa-repeat"></i>
         	  </div>
-        </section id="modal">
-        <ul class="stars">
-          <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
-        </ul>
-        <section>
+        </section>
 
+        <section  id="modal">
+          <h2>Congratulations!</h2>
+          <h2 class="you-won">you won!</h2>
+          <span>You used <span class="moves"></span> and your score is:</span>
+          <ul class="stars">
+            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star"></i></li>
+          </ul>
+
+          <div class="play-again-buttons">
+            <p>Do you want to play again?</p>
+            <button class="yes-button" name="yes">Yes!</button>
+            <button class="yes-button" name="no">No!</button>
+          </div>
         </section>
 
         <ul class="deck">
