add displaying moves to the modal

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -16,7 +16,7 @@
         </header>
 
         <section class="score-panel">
-        	 	<span class="moves">0 Moves.</span>
+        	 	<span class="moves">0 Moves</span>
 
             <div class="restart">
         		    <i class="fa fa-repeat"></i>
@@ -26,7 +26,7 @@
         <section  id="modal">
           <h2>Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
-          <span>You used <span class="moves"></span> and your score is:</span>
+          <span>You used <span class="moves">0 Moves</span> and your score is:</span>
           <ul class="stars">
             <li><i class="fa fa-star"></i></li>
             <li><i class="fa fa-star"></i></li>
