style the modal window

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -24,7 +24,7 @@
         </section>
 
         <section  id="modal">
-          <h2>Congratulations!</h2>
+          <h2 class="congrats">Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
           <ul class="stars">
@@ -36,7 +36,7 @@
           <div class="play-again-buttons">
             <p>Do you want to play again?</p>
             <button class="yes-button" name="yes">Yes!</button>
-            <button class="yes-button" name="no">No!</button>
+            <button class="no-button" name="no">No!</button>
           </div>
         </section>
 
