add modal toggle functionality after all the cards are turned on

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -23,7 +23,7 @@
         	  </div>
         </section>
 
-        <section  id="modal">
+        <section  id="modal" class="hidden">
           <h2 class="congrats">Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
