add star ranking functionality

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -11,26 +11,35 @@
 <body>
 
     <div class="container">
+
         <header>
             <h1>Matching Game</h1>
         </header>
 
         <section class="score-panel">
-        	 	<span class="moves">0 Moves</span>
+          <ul class="stars">
+          <li class="star"><i class="fa fa-star"></i></li>
+          <li class="star"><i class="fa fa-star"></i></li>
+          <li class="star"><i class="fa fa-star"></i></li>
+          </ul>
+        	 <span class="moves">0 Moves</span>
 
-            <div class="restart">
-        		    <i class="fa fa-repeat"></i>
-        	  </div>
+          <div class="restart">
+        		   <i class="fa fa-repeat"></i>
+        	 </div>
         </section>
 
         <section  id="modal" class="hidden">
+
           <h2 class="congrats">Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
+
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
+          
           <ul class="stars">
-            <li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
+            <li class="star"><i class="fa fa-star"></i></li>
+            <li class="star"><i class="fa fa-star"></i></li>
+            <li class="star"><i class="fa fa-star"></i></li>
           </ul>
 
           <div class="play-again-buttons">
