add timer functionality, but not working properly

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -23,6 +23,8 @@
           <li class="star"><i class="fa fa-star"></i></li>
           </ul>
         	 <span class="moves">0 Moves</span>
+           <span>&nbsp; &nbsp; &nbsp;</span>
+           <span class="timer"></span>
 
           <div class="restart">
         		   <i class="fa fa-repeat"></i>
@@ -35,7 +37,7 @@
           <h2 class="you-won">you won!</h2>
 
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
-          
+
           <ul class="stars">
             <li class="star"><i class="fa fa-star"></i></li>
             <li class="star"><i class="fa fa-star"></i></li>
