change timer function including stopping timer and reseting time. Exists bug with timer launch delay

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -35,7 +35,7 @@
 
           <h2 class="congrats">Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
-
+          <p>Well done! You completed the game in: <span class="timer"></span></p>
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
 
           <ul class="stars">
