--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-
-    <div class="container">
-
+    <main class="container">
         <header>
             <h1>Matching Game</h1>
         </header>
@@ -27,14 +26,14 @@
            <span class="timer"></span>
 
           <div class="restart">
-        		   <i class="fa fa-repeat"></i>
-        	 </div>
-        </section>
+        		 <i class="fa fa-repeat"></i>
+        	</div>
+        </section><!-- .score-panel -->
 
         <section  id="modal" class="hidden">
-
           <h2 class="congrats">Congratulations!</h2>
           <h2 class="you-won">you won!</h2>
+
           <p>Well done! You completed the game in: <span class="timer"></span></p>
           <span>You used <span class="moves">0 Moves</span> and your score is:</span>
 
@@ -46,14 +45,15 @@
 
           <div class="play-again-buttons">
             <p>Do you want to play again?</p>
-            <button class="yes-button" name="yes">Yes!</button>
-            <button class="no-button" name="no">No!</button>
+            <button class="m-button yes-button" name="yes">Yes!</button>
+            <button class="m-button no-button" name="no">No!</button>
           </div>
-        </section>
+        </section><!-- #modal -->
 
         <ul class="deck">
-        </ul>
-    </div>
+        </ul><!-- deck of cards -->
+
+    </main><!-- .container -->
 
     <script src="js/app.js"></script>
 </body>
