--- a/02_FEND_Nanodegree-2018/Project04 - Arcade Game clone/index.html
+++ b/02_FEND_Nanodegree-2018/Project04 - Arcade Game clone/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="score-box">Points: <span id="points"></span></div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
