cat clicker with 5 cat's specification(not working)

--- a/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
+++ b/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
@@ -15,16 +15,16 @@
         <h1>Aleks' Cat clicker</h1>
         <p>Click on the cat's picture below</p>
       </header>
-      <div class="cat-picture section">
-        <h2 class="cat-name"></h2>
-        <img src="img/cat.jpg" alt="black cat with yellow eyes, looking straight">
-        <p>You clicked the cat picture <span class="click-count"></span>. </p>
+      
+      <div id="cat-box" class="section">
+        <h2 id="cat-name"></h2>
+        <div id="cat-picture"></div>
+        <p>You clicked the cat picture <span id="click-count"></span>. </p>
       </div>
-      <div class="cat-picture section">
-        <h2 class="cat-name"></h2>
-        <img src="img/cat.jpg" alt="black cat with yellow eyes, looking straight">
-        <p>You clicked the cat picture <span class="click-count"></span>. </p>
-      </div>
+
+      <ul id="cat-list" class="list">
+      </ul>
+
 
 
 
