cat clicker proper way implementation model-view-octopus

--- a/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
+++ b/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
@@ -15,10 +15,10 @@
         <h1>Aleks' Cat clicker</h1>
         <p>Click on the cat's picture below</p>
       </header>
-      
+
       <div id="cat-box" class="section">
         <h2 id="cat-name"></h2>
-        <div id="cat-picture"></div>
+        <div id="cat-picture"> <img src="" alt="Very cute cat"> </div>
         <p>You clicked the cat picture <span id="click-count"></span>. </p>
       </div>
 
