cat clicker index.html update

--- a/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
+++ b/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/index.html
@@ -18,7 +18,7 @@
 
       <div id="cat-box" class="section">
         <h2 id="cat-name"></h2>
-        <div id="cat-picture"> <img src="" alt="Very cute cat"> </div>
+        <img id="cat-picture" src="" alt="Very cute cat">
         <p>You clicked the cat picture <span id="click-count"></span>. </p>
       </div>
 
